# sparrow-rockfinch

./: .gitignore  CMakeLists.txt  README.md  environment-dev.yml  pixi.toml  pyproject.toml  sparrow-pycapsuleConfig.cmake.in  sparrow-rockfinchConfig.cmake.in
.github/workflows/: linux.yml  osx.yml  release.yml  windows.yml
cmake/: compile_options.cmake  external_dependencies.cmake
include/sparrow-pycapsule/: pycapsule.hpp  sparrow_array_python_class.hpp
include/sparrow-pycapsule/config/: config.hpp  sparrow_pycapsule_version.hpp
include/sparrow-rockfinch/: pycapsule.hpp  sparrow_array_python_class.hpp  sparrow_stream_python_class.hpp
include/sparrow-rockfinch/config/: config.hpp  sparrow_rockfinch_version.hpp
include/sparrow-rockfinch/detail/: sparrow_array_numpy_interop.hpp
python/sparrow_rockfinch/: __init__.py
src/: SparrowPythonClass.cpp  pycapsule.cpp  sparrow_array_module.cpp  sparrow_array_module.hpp  sparrow_array_python_class.cpp  sparrow_module.cpp  sparrow_stream_module.cpp  sparrow_stream_module.hpp  sparrow_stream_python_class.cpp
test/: CMakeLists.txt  sparrow_helpers.py  test_common.py  test_library_load.py  test_ndarray.py  test_package_integration.py  test_polars_helper.cpp  test_polars_helper.hpp  test_polars_helper_module.cpp  test_polars_integration.py  test_pycapsule.cpp  test_sparrow_helper_module.cpp  test_sparrow_integration.py  test_sparrow_stream.cpp  test_sparrow_stream.py
